# state-fin-ingest

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
state_fin_ingest/: dir.py  index.py  ingest.py  ingestor.py  mapping_template.py  run_ingestor.py
state_fin_ingest/mi/: README.md  contrib_ingestor.py  ingestor.py  report_ingestor.py
state_fin_ingest/tx/: README.md  contrib_ingestor.py  ingestor.py  report_ingestor.py
tests/: test_state_fin_ingest.py
