[tool.poetry]
name = "state-fin-ingest"
version = "0.1.0"
description = ""
authors = ["Poff Poffenberger <poffdeluxe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.9.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
